--- a/package.json
+++ b/package.json
@@ -6,10 +6,23 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@yaireo/tagify": "^4.17.9",
+    "bootstrap": "^5.3.2",
+    "bootstrap-maxlength": "^1.10.1",
+    "bootstrap-timepicker": "^0.5.2",
+    "daterangepicker": "^3.1.0",
+    "inputmask": "^5.0.8",
+    "jquery": "^3.7.1",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.4",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-toastify": "^9.1.3",
+    "tempusdominus-bootstrap-4": "^5.39.2",
+    "web-vitals": "^2.1.4",
+    "axios": "^0.27.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.67.0"
   }
 }
