--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@yaireo/tagify": "^4.17.9",
+    "antd": "^5.9.1",
+    "axios": "^0.27.2",
     "bootstrap": "^5.3.2",
     "bootstrap-maxlength": "^1.10.1",
     "bootstrap-timepicker": "^0.5.2",
@@ -17,12 +19,13 @@
     "moment": "^2.29.4",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "tempusdominus-bootstrap-4": "^5.39.2",
-    "web-vitals": "^2.1.4",
-    "axios": "^0.27.2"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
